--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:    
     db-postgres-compose:
+        container_name: db-postgres
         image: postgres
         environment:
             POSTGRES_PASSWORD: "^4vBdKzF28Ab"
@@ -13,6 +14,7 @@ services:
         
     client-pgadmin-compose:
         image: dpage/pgadmin4
+        container_name: client-pgadmin
         environment:
             PGADMIN_DEFAULT_EMAIL: "dba@admin.com"
             PGADMIN_DEFAULT_PASSWORD: "^4vBdKzF28Ab"
@@ -24,7 +26,7 @@ services:
             - db-network
 
     default-arch:
-        container_name: default-arch-microservice
+        container_name: ms-products
         image: ms-products-img:latest
         ports:
             - 8091:8091
